Fix search-results being cut off viewport

--- a/src/less/content.less
+++ b/src/less/content.less
@@ -126,7 +126,7 @@
   top: 50px;
   padding: 5px;
   right: 0px;
-  width: 200px;
+  width: 184px;
   background-color: white;
   border: 1px solid lighten(gray, 40%);
   border-radius: 3px;
